--- a/deliverables/Cat Math/app/src/main/res/layout/mathdrills.xml
+++ b/deliverables/Cat Math/app/src/main/res/layout/mathdrills.xml
@@ -2,16 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/img"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <Button
         android:id="@+id/button12"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="3dp"
-        android:background="#03A9F4"
+        android:background="@drawable/mathdrillsbuttons"
         android:text="7"
         app:layout_constraintBottom_toTopOf="@+id/button11"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,9 +25,13 @@
         android:layout_height="120dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="1dp"
-        android:background="#BD0101"
+        android:background="@drawable/mathdrillsclear"
         android:text="CLEAR"
         android:textColor="#E7FFFFFF"
+        android:bottomRightRadius="30dp"
+        android:bottomLeftRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toStartOf="@+id/imageButton5"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,9 +45,9 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="1dp"
-        android:background="#4CAF50"
+
         android:text="ENTER"
-        android:textColor="#EF020202"
+        android:background="@drawable/enterbutton"
         app:layout_constraintBottom_toTopOf="@+id/button9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton5"
@@ -82,11 +87,12 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:background="#03A9F4"
+
         android:text="1"
+        android:background="@drawable/mathdrillsbuttons"
         app:layout_constraintBottom_toTopOf="@+id/button5"
         app:layout_constraintEnd_toStartOf="@+id/button9"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,12 +100,13 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="3dp"
-        android:background="#03A9F4"
+
         android:text="2"
+        android:background="@drawable/mathdrillsbuttons"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toStartOf="@+id/button12"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,12 +114,13 @@
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="3dp"
-        android:background="#03A9F4"
+
         android:text="3"
+        android:background="@drawable/mathdrillsbuttons"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toStartOf="@+id/button11"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,10 +128,10 @@
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
-        android:background="#03A9F4"
+        android:background="@drawable/mathdrillsbuttons"
         android:text="4"
         app:layout_constraintBottom_toTopOf="@+id/button8"
         app:layout_constraintEnd_toStartOf="@+id/button10"
@@ -133,11 +141,11 @@
     <Button
         android:id="@+id/button8"
         style="@style/Widget.AppCompat.Button"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="26dp"
-        android:background="#03A9F4"
+        android:background="@drawable/mathdrillsbuttons"
         android:text="5"
         app:layout_constraintBottom_toTopOf="@+id/progressBar2"
         app:layout_constraintEnd_toStartOf="@+id/button13"
@@ -146,10 +154,11 @@
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="200dp"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginEnd="3dp"
-        android:background="#03A9F4"
+        android:background="@drawable/mathdrillsbuttons"
         android:text="6"
         app:layout_constraintBottom_toTopOf="@+id/button12"
         app:layout_constraintEnd_toEndOf="parent"
@@ -158,10 +167,10 @@
 
     <Button
         android:id="@+id/button10"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginEnd="3dp"
-        android:background="#03A9F4"
+        android:background="@drawable/mathdrillsbuttons"
         android:text="9"
         app:layout_constraintBottom_toTopOf="@+id/button13"
         app:layout_constraintEnd_toEndOf="parent"
@@ -171,11 +180,11 @@
     <Button
         android:id="@+id/button13"
         style="@style/Widget.AppCompat.Button"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginEnd="3dp"
         android:layout_marginBottom="29dp"
-        android:background="#03A9F4"
+        android:background="@drawable/mathdrillsbuttons"
         android:text="0"
         app:layout_constraintBottom_toTopOf="@+id/progressBar2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -184,11 +193,11 @@
 
     <Button
         android:id="@+id/button11"
-        android:layout_width="200dp"
+        android:layout_width="150dp"
         android:layout_height="70dp"
         android:layout_marginTop="3dp"
         android:layout_marginEnd="3dp"
-        android:background="#03A9F4"
+        android:background="@drawable/mathdrillsbuttons"
         android:text="8"
         app:layout_constraintBottom_toTopOf="@+id/button10"
         app:layout_constraintEnd_toEndOf="parent"
